test/src/e2e_vm_tests/test_programs/should_fail/struct_field_privacy_workspace/test_lib/src/lib.sw
library;

pub mod lib01;

pub fn use_me() {
    ::lib01::use_me();
    ::lib01::lib01_nested::use_me();
}